src/main/java/com/example/citronix/web/errors/VenteUndefinedException.java
package com.example.citronix.web.errors;

public class VenteUndefinedException extends RuntimeException {
    public VenteUndefinedException(String message) {
        super(message);
    }
}
